# pyfivetran

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  pyproject.toml  readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  test.yml
docs/: conf.py  examples.md  index.md  quickstart.md
docs/apidocs/: index.rst
docs/apidocs/pyfivetran/: pyfivetran.client.rst  pyfivetran.endpoints.base.rst  pyfivetran.endpoints.certificate.rst  pyfivetran.endpoints.connector.rst  pyfivetran.endpoints.destination.rst  pyfivetran.endpoints.group.rst  pyfivetran.endpoints.logs.rst  pyfivetran.endpoints.roles.rst  pyfivetran.endpoints.rst  pyfivetran.endpoints.schema.rst  pyfivetran.endpoints.users.rst  pyfivetran.endpoints.webhook.rst  pyfivetran.rst  pyfivetran.shed.rst  pyfivetran.utils.rst
examples/yaml_dsl/: example.py
pyfivetran/: __init__.py  client.py  shed.py  utils.py
pyfivetran/endpoints/: __init__.py  base.py  certificate.py  connector.py  destination.py  group.py  logs.py  roles.py  schema.py  users.py  webhook.py
tests/: test_client.py  test_utils.py
tests/endpoints/: test_base.py  test_certificate.py  test_connector.py  test_destination.py  test_group.py  test_logs.py  test_roles.py  test_schema.py  test_users.py  test_webhook.py
