[tool.poetry]
name = "pyfivetran"
version = "0.1.0"
description = "Pythonic interface to the fivetran API"
authors = ["Khari Gardner <kharigardner@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
lazy = "^1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
pytest-httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
    "__pypackages__",
    "build",
    "dist"
]

line-length = 88
indent-width = 4