[tool.poetry]
name = "pyfivetran"
version = "2024.04.26.01"
description = "Pythonic interface to the fivetran API"
authors = ["Khari Gardner <kharigardner@protonmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
httpx = "^0.25.1"
lazy = "^1.6"
pytz = "^2024.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"
coverage = {extras = ["toml"], version = "^7.3.4"}
pytest-cov = "^4.1.0"
isort = "^5.13.2"
types-python-dateutil = "^2.8.19.20240106"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
sphinx-autodoc2 = {extras = ["cli"], version = "^0.5.0"}
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
    "__pypackages__",
    "build",
    "dist",
    "tests"
]

line-length = 88
indent-width = 4

[tool.pytest]
testpaths = [
    "tests",
]

